--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,10 @@ services:
       context: . # Specify where the Dockerfile is located (e.g. in the root directory of the project)
       dockerfile: ./docker/Dockerfile-php # Specify the name of the Dockerfile
     environment: # You can use this section to set environment variables. But you can also use the .env file.
-      - DATABASE_URL=mysql://${MYSQL_ROOT_USER}:${MYSQL_ROOT_PASSWORD}@db:3306/${MYSQL_DATABASE} # Connection string for the database.
-      - REMOTE_API_UPL=${REMOTE_API_UPL}
+      - DATABASE_USER=${MYSQL_ROOT_USER}
+      - DATABASE_PASS=${MYSQL_ROOT_PASSWORD}
+      - DATABASE_NAME=${MYSQL_DATABASE}
+      - DATABASE_HOST=db
     volumes:
       - ./project/:/var/www/project/ # Location of the project for php-fpm. Note this should be the same for NGINX.
     networks:
